@@ -278,6 +278,89 @@ label.ms-validation-error {
 		display: table;
 		clear: both;
 	}
+
+	#pass-strength-result {
+		background-color: #eee;
+		border: 1px solid #ddd;
+		color: #23282d;
+		margin: -1px 0 0;
+		padding: 3px 5px;
+		text-align: center;
+		width: 100%;
+		display: block;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		opacity: 0;
+
+		&.short {
+			background-color: #f1adad;
+			border-color: #e35b5b;
+			opacity: 1;
+		}
+
+		&.bad {
+			background-color: #fbc5a9;
+			border-color: #f78b53;
+			opacity: 1;
+		}
+
+		&.good {
+			background-color: #ffe399;
+			border-color: #ffc733;
+			opacity: 1;
+		}
+
+		&.strong {
+			background-color: #c1e1b9;
+			border-color: #83c373;
+			opacity: 1;
+		}
+	}
+
+	#pass1.short,
+	#pass1-text.short {
+		border-color: #e35b5b;
+	}
+
+	#pass1.bad,
+	#pass1-text.bad {
+		border-color: #f78b53;
+	}
+
+	#pass1.good,
+	#pass1-text.good {
+		border-color: #ffc733;
+	}
+
+	#pass1.strong,
+	#pass1-text.strong {
+		border-color: #83c373;
+	}
+
+	.pw-weak {
+		display: none;
+	}
+
+	.indicator-hint {
+		padding-top: 8px;
+	}
+
+	#pass1,
+	#pass1-text {
+		width: 100%;
+		text-align: center;
+	}
+
+	#pass1,
+	.show-password #pass1-text {
+		display: block;
+	}
+
+	.show-password #pass1,
+	#pass1-text {
+		display: none;
+	}
 }
 
 
