@@ -26,6 +26,8 @@ class MS_View_Shortcode_Login extends MS_View {
 				$form = 'logout';
 			} elseif ( isset( $action ) && 'resetpass' === $action ) {
 				$form = 'reset';
+			} elseif ( 'lostpass' == $_GET['show'] ) {
+				$form = 'lost';
 			} else {
 				$form = 'login';
 			}
@@ -494,96 +496,144 @@ class MS_View_Shortcode_Login extends MS_View {
 	 * @return string
 	 */
 	private function reset_form() {
-		ob_start();
+		static $Reset_Result = null;
 
-		lib2()->array->equip_get( 'login', 'key' );
-		$rp_login = wp_unslash( $_GET['login'] );
-		$rp_key = wp_unslash( $_GET['key'] );
-		$err_msg = new WP_Error();
+		if ( null === $Reset_Result ) {
+			lib2()->array->equip_get( 'login', 'key' );
+			lib2()->array->equip_post( 'pass1', 'pass2' );
+			$rp_login = wp_unslash( $_GET['login'] );
+			$rp_key = wp_unslash( $_GET['key'] );
+			$err_msg = new WP_Error();
+			$fatal_error = false;
 
-		// Get the user object and validate the key.
-		if ( $rp_login && $rp_key ) {
-			$user = check_password_reset_key( $rp_key, $rp_login );
-		} else {
-			$user = false;
-		}
+			lib2()->array->strip_slashes( $_POST, 'pass1', 'pass2' );
+			$pass1 = $_POST['pass1'];
+			$pass2 = $_POST['pass2'];
 
-		lib2()->array->strip_slashes( $_POST, 'pass1', 'pass2' );
-
-		// If the user was not found then redirect to an error page.
-		if ( ! $user || is_wp_error( $user ) ) {
-			if ( $user && 'expired_key' == $user->get_error_code() ) {
-				$err_msg->add( 'password_expired_key', __( 'The password-reset key is already expired.', MS_TEXT_DOMAIN ) );
+			// Get the user object and validate the key.
+			if ( $rp_login && $rp_key ) {
+				$user = check_password_reset_key( $rp_key, $rp_login );
 			} else {
-				$err_msg->add( 'password_invalid_key', __( 'The password-reset key is invalid or missing.', MS_TEXT_DOMAIN ) );
+				$user = false;
 			}
-			$url = esc_url_raw(
-				remove_query_arg( array( 'action', 'key', 'login' ) )
-			);
 
-			return sprintf(
-				'<p>%s</p><p><a href="%s">%s</a>',
-				$err_msg,
-				$url,
-				__( 'Request a new password-reset key', MS_TEXT_DOMAIN )
-			);
-		} else {
-			// If the user provided a new password, then check it now.
-			if ( isset( $_POST['pass1'] ) && $_POST['pass1'] != $_POST['pass2'] ) {
-				$err_msg->add( 'password_reset_mismatch', __( 'The passwords do not match.', MS_TEXT_DOMAIN ) );
+			if ( ! $user || is_wp_error( $user ) ) {
+				// If the user was not found then show an error message.
+				if ( $user && 'expired_key' == $user->get_error_code() ) {
+					$fatal_error = true;
+					$err_msg->add(
+						'password_expired_key',
+						__( 'Sorry, this reset-key is not valid anymore. Please request a new reset email and try again.', MS_TEXT_DOMAIN )
+					);
+				} else {
+					$fatal_error = true;
+					$err_msg->add(
+						'password_invalid_key',
+						__( 'Sorry, we did not find a valid reset-key. Please request a new reset email and try again.', MS_TEXT_DOMAIN )
+					);
+				}
+			} else {
+				// If the user provided a new password, then check it now.
+				if ( $pass1 && $pass1 != $pass2 ) {
+					$pass1 = false;
+					$err_msg->add(
+						'password_reset_mismatch',
+						__( 'The passwords do not match, try again.', MS_TEXT_DOMAIN )
+					);
+				}
 			}
+
+			if ( $fatal_error && count( $err_msg->errors ) ) {
+				$url = esc_url_raw(
+					add_query_arg(
+						array( 'show' => 'lostpass' ),
+						remove_query_arg( array( 'action', 'key', 'login' ) )
+					)
+				);
+
+				$Reset_Result = sprintf(
+					'[ms-note type="warning"]%s[/ms-note]<a href="%s">%s</a>',
+					$err_msg->get_error_message(),
+					$url,
+					__( 'Request a new password-reset key', MS_TEXT_DOMAIN )
+				);
+			} elseif ( $pass1 ) {
+				// This action is documented in wp-login.php
+				do_action( 'validate_password_reset', $err_msg, $user );
+
+				reset_password( $user, $_POST['pass1'] );
+
+				// All done! Show success message and link to login form
+				$url = esc_url_raw(
+					remove_query_arg( array( 'action', 'key', 'login' ) )
+				);
+
+				$Reset_Result = sprintf(
+					'[ms-note type="info"]%s[/ms-note]<a href="%s">%s</a>',
+					__( 'Your Password has been reset.', MS_TEXT_DOMAIN ),
+					$url,
+					__( 'Login with your new password', MS_TEXT_DOMAIN )
+				);
+			} else {
+				// This action is documented in wp-login.php
+				do_action( 'validate_password_reset', $err_msg, $user );
+
+				wp_enqueue_script( 'utils' );
+				wp_enqueue_script( 'user-profile' );
+
+				ob_start();
+				if ( count( $err_msg->errors ) ) {
+					printf(
+						'[ms-note type="warning"]%s[/ms-note]',
+						implode( '<br>', $err_msg->get_error_messages() )
+					);
+				}
+				?>
+				<form name="resetpassform" id="resetpassform"
+					action="" method="post" autocomplete="off" class="ms-form">
+					<input type="hidden" id="user_login"
+						value="<?php echo esc_attr( $rp_login ); ?>" autocomplete="off"/>
+
+					<p class="user-pass1-wrap">
+						<label for="pass1"><?php _e('New password') ?></label><br />
+						<div class="wp-pwd">
+							<span class="password-input-wrapper">
+								<input type="password" data-reveal="1" data-pw="<?php echo esc_attr( wp_generate_password( 16 ) ); ?>" name="pass1" id="pass1" class="input" size="20" value="" autocomplete="off" aria-describedby="pass-strength-result" />
+							</span>
+							<div id="pass-strength-result" class="hide-if-no-js" aria-live="polite"><?php _e( 'Strength indicator' ); ?></div>
+						</div>
+					</p>
+					<p class="user-pass2-wrap">
+						<label for="pass2"><?php _e('Confirm new password') ?></label><br />
+						<input type="password" name="pass2" id="pass2" class="input" size="20" value="" autocomplete="off" />
+					</p>
+
+					<p class="description indicator-hint"><?php echo wp_get_password_hint(); ?></p>
+
+					<br class="clear"/>
+
+					<?php
+					// This action is documented in wp-login.php
+					do_action( 'resetpass_form', $user );
+					?>
+					<p class="submit">
+						<input type="hidden" name="rp_key" value="<?php echo esc_attr( $rp_key ); ?>" />
+
+						<button type="submit" name="wp-submit" id="wp-submit"
+						class="button button-primary button-large">
+						<?php _e( 'Reset Password', MS_TEXT_DOMAIN ); ?>
+						</button>
+					</p>
+				</form>
+				<?php
+				$html = ob_get_clean();
+				$Reset_Result = apply_filters( 'ms_compact_code', $html );
+			}
+
+			$Reset_Result = do_shortcode( $Reset_Result );
 		}
 
-		// This action is documented in wp-login.php
-		do_action( 'validate_password_reset', $err_msg, $user );
-
-		if ( ! count( $err_msg->errors )
-			&& isset( $_POST['pass1'] ) && ! empty( $_POST['pass1'] )
-		) {
-			reset_password( $user, $_POST['pass1'] );
-
-			// All done!
-			return __( 'Your Password has been reset.', MS_TEXT_DOMAIN );
-		}
-
-		wp_enqueue_script( 'utils' );
-		wp_enqueue_script( 'user-profile' );
-
-		if ( count( $err_msg->errors ) ) {
-			echo '<p class="error">' . implode( '<br/>', $err_msg->get_error_messages() ) . '</p>';
-		}
-		?>
-		<form name="resetpassform" id="resetpassform" action="" method="post" autocomplete="off">
-			<input type="hidden" id="user_login" value="<?php echo esc_attr( $rp_login ); ?>" autocomplete="off"/>
-
-			<p>
-				<label for="pass1"><?php _e( 'New password', MS_TEXT_DOMAIN ) ?><br/>
-					<input type="password" name="pass1" id="pass1" class="input" size="20" value="" autocomplete="off"/></label>
-			</p>
-
-			<p>
-				<label for="pass2"><?php _e( 'Confirm new password', MS_TEXT_DOMAIN ) ?><br/>
-					<input type="password" name="pass2" id="pass2" class="input" size="20" value="" autocomplete="off"/></label>
-			</p>
-
-			<div id="pass-strength-result"
-				class="hide-if-no-js"><?php _e( 'Strength indicator', MS_TEXT_DOMAIN ); ?></div>
-			<p class="description indicator-hint"><?php _e( 'Hint: The password should be at least seven characters long. To make it stronger, use upper and lower case letters, numbers, and symbols like ! " ? $ % ^ &amp; ).', MS_TEXT_DOMAIN ); ?></p>
-
-			<br class="clear"/>
-
-			<?php
-			// This action is documented in wp-login.php
-			do_action( 'resetpass_form', $user );
-			?>
-			<p class="submit"><input type="submit" name="wp-submit" id="wp-submit"
-				class="button button-primary button-large"
-				value="<?php esc_attr_e( 'Reset Password' ); ?>"/></p>
-		</form>
-		<?php
-		$html = ob_get_clean();
-		$html = apply_filters( 'ms_compact_code', $html );
-
-		return $html;
+		return $Reset_Result;
 	}
+
 }
