@@ -9,6 +9,7 @@ Change Log:
 - Improve the shortcode column in the admin membership list
 - Improve layout of the [ms-note] messages on front-end
 - Fix wrong registration workflow that showed membership list instead of payment form
+- Fix the Reset Password workflow
 - Fix issue in WP 4.3 that sent password-reset emails during user registration
 - Fix problem with user registration when the password fields were hidden via Profile Fields Add-on
 - Fix ms-protect-content shortcode: Resolve shortcodes in protected content also for admin users
